--- a/test-output/old/Failed suite [Suite]/methods-alphabetical.html
+++ b/test-output/old/Failed suite [Suite]/methods-alphabetical.html
@@ -1,32 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Failed suite [Suite]</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.VerifyAdminTab()[pri:2, instance:testPackage.TestClass@30c15d8b]">VerifyAdminTab</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.VerifyAdminTab()[pri:2, instance:testPackage.TestClass@30c15d8b]">VerifyAdminTab</td> 
   <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:32</td>   <td>9539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.VerifyAdminTab()[pri:2, instance:testPackage.TestClass@3b0090a4]">VerifyAdminTab</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:56</td>   <td>20758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.VerifyAdminTab()[pri:2, instance:testPackage.TestClass@6f03482]">VerifyAdminTab</td> 
   <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:23</td>   <td>119</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestClass.afterClass()[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:32</td>   <td>9664</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestClass.afterClass()[pri:0, instance:testPackage.TestClass@3b0090a4]">&lt;&lt;afterClass</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:36</td>   <td>328</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestClass.afterClass()[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>23/03/17 16:11:23</td>   <td>120</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>23/03/17 16:11:32</td>   <td>9664</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:testPackage.TestClass@3b0090a4]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>23/03/17 16:11:23</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>23/03/17 16:11:32</td>   <td>9541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testPackage.TestClass@3b0090a4]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:23</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeClass()[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:57</td>   <td>21075</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestClass.afterClass()[pri:0, instance:testPackage.TestClass@6f03482]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:32</td>   <td>9538</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeClass()[pri:0, instance:testPackage.TestClass@3b0090a4]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:36</td>   <td>328</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:57</td>   <td>21075</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:testPackage.TestClass@6f03482]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:36</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:36</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testPackage.TestClass@30c15d8b]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:56</td>   <td>20772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testPackage.TestClass@6f03482]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:56</td>   <td>20772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testPackage.TestClass@6f03482]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:30</td>   <td>-5994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeClass()[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:23</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeMethod()[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:51</td>   <td>15698</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeClass()[pri:0, instance:testPackage.TestClass@6f03482]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeMethod()[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/03/17 16:11:32</td>   <td>9539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeMethod()[pri:0, instance:testPackage.TestClass@3b0090a4]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeMethod()[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>23/03/17 16:11:17</td>   <td>-5349</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest(java.lang.String)[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:56</td>   <td>20758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeMethod()[pri:0, instance:testPackage.TestClass@6f03482]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:56</td>   <td>20758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeMethod()[pri:0, instance:testPackage.TestClass@6f03482]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:20</td>   <td>-15868</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest(java.lang.String)[pri:0, instance:testPackage.TestClass@30c15d8b]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>23/03/17 16:11:23</td>   <td>147</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest(java.lang.String)[pri:0, instance:testPackage.TestClass@3b0090a4]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="94f07b">  <td>23/04/02 08:35:36</td>   <td>369</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest(java.lang.String)[pri:0, instance:testPackage.TestClass@6f03482]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:30</td>   <td>-5950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.test1()[pri:1, instance:testPackage.TestClass@30c15d8b]">test1</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>23/04/02 08:35:51</td>   <td>15698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.test1()[pri:1, instance:testPackage.TestClass@6f03482]">test1</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
 </table>
