--- a/test-output/old/Failed suite [Suite]/methods-not-run.html
+++ b/test-output/old/Failed suite [Suite]/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testPackage.TestClass.test1</td></tr>
-<tr><td>testPackage.TestClass.test1</td></tr>
+<tr><td>testPackage.BaseClass.beforeTest</td></tr>
+<tr><td>testPackage.BaseClass.afterTest</td></tr>
+<tr><td>testPackage.BaseClass.afterTest</td></tr>
+<tr><td>testPackage.BaseClass.beforeTest</td></tr>
 </table>
