--- a/test-output/old/Failed suite [Suite]/toc.html
+++ b/test-output/old/Failed suite [Suite]/toc.html
@@ -10,10 +10,10 @@
 <tr valign='top'>
 <td>2 tests</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>2 methods:<br/>
+<td>4 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (2)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (4)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
@@ -22,16 +22,16 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>edge(failed) (0/1/0)</td><td valign='top' align='right'>
-  <a href='edge(failed).html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>chrome(failed) (1/1/0)</td><td valign='top' align='right'>
+  <a href='chrome(failed).html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>firefox(failed) (0/1/0)</td><td valign='top' align='right'>
-  <a href='firefox(failed).html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>edge(failed) (1/1/0)</td><td valign='top' align='right'>
+  <a href='edge(failed).html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
